<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/placeSearchFragment">

    <fragment
        android:id="@+id/placeSearchFragment"
        android:name="com.kdotj.viewmodelsample.search.SearchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_placeListFragment"
            app:destination="@id/placeListFragment" />
    </fragment>

    <fragment
        android:id="@+id/placeListFragment"
        android:name="com.kdotj.viewmodelsample.place_list.PlaceListFragment"
        android:label="@string/fragment_places_list"
        tools:layout="@layout/fragment_place_list">
        <action
            android:id="@+id/action_placeListFragment_to_placeDetailFragment"
            app:destination="@id/placeDetailFragment" />
        <argument
            android:name="query"
            app:type="String" />
        <argument
            android:name="type"
            app:type="String" />
    </fragment>

    <fragment
        android:id="@+id/placeDetailFragment"
        android:name="com.kdotj.viewmodelsample.place_detail.PlaceDetailFragment"
        android:label="@string/fragment_place_detail"
        tools:layout="@layout/fragment_place_detail">
        <argument android:name="place" />
    </fragment>
</navigation>